# CUPREDS_core

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  library.cpp  library.h  pcl_aggregator_coreConfig.cmake
include/pcl_aggregator_core/: PCLRegistrator.h
include/pcl_aggregator_core/cuda/: CUDAPointClouds.cuh  CUDAPointClouds.h  CUDA_RGBD.cuh  CUDA_RGBD.h  cuda_pointclouds.cuh  cuda_rgbd.cuh
include/pcl_aggregator_core/entities/: StampedPointCloud.h
include/pcl_aggregator_core/managers/: InterSensorManager.h  IntraSensorManager.h  PointCloudsManager.h  StreamManager.h
include/pcl_aggregator_core/utils/: RGBDDeprojector.h  Utils.h
src/: PCLRegistrator.cpp
src/cuda/: CUDAPointClouds.cu  CUDA_RGBD.cu  cuda_pointclouds.cu  cuda_rgbd.cu
src/entities/: StampedPointCloud.cpp
src/managers/: InterSensorManager.cpp  IntraSensorManager.cpp  PointCloudsManager.cpp  StreamManager.cpp
src/utils/: RGBDDeprojector.cpp  Utils.cpp
